2015-07-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter), src/nano.c (allow_pending_sigwinch):
	Reenable SIGWINCH-es also when invoking the formatter fails, and
	correct some comments.
	* src/text.c (do_linter, do_formatter): In restricted mode, no nanorc
	files are read, so no linter or formatter will be defined, so these
	routines will never be called.  Also, the formatter will only ever
	be called when a syntax applies to the current file and this syntax
	defines a formatter, so there is no need to check this again.

2015-07-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): When doing regex replacements, find
	each zero-length match only once.  This fixes Savannah bug #45626.
	* src/global.c (shortcut_init, strtosc), src/search.c (do_findnext,
	do_findprevious), doc/man/nanorc.5, doc/texinfo/nano.texi: Add two
	new bindable functions, 'findnext' and 'findprevious', which repeat
	the last search command in a fixed direction without prompting.
	* src/global.c (shortcut_init): Tweak a string.
	* src/search.c, src/move.c: Improve a few of the comments.
	* src/search.c (replace_regexp, replace_line): Rename two variables,
	and make the calculation of the new line size more symmetrical.

2015-07-25  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init, strtosc), src/files.c (savefile),
	doc/man/nanorc.5, doc/texinfo/nano.texi: Add a new bindable function,
	'savefile', which writes a file to disk without first asking for its
	name.  This implements Savannah patch #8208 submitted by Seiya Nuta.

2015-07-23  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/{nano.1,nanorc.5}, doc/texinfo/nano.texi: Add deprecation
	notices for the options 'set const', 'set poslog' and '--poslog'.
	Suggested by Eitan Adler.
	* doc/faq.html: Mention --disable-histories and --disable-libmagic.
	* src/chars.c (mbstrcasestr, mbrevstrcasestr): When searching, find